--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         container_name: redis.redisratelimiting.docker
         restart: unless-stopped
         ports:
-            - 127.0.0.1:6379:6379
+            - 127.0.0.1:${REDIS_PORT}:6379
         networks:
             - global
 networks:
