--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "dev": "nodemon src/index.js"
+        "dev": "NODE_ENV=development nodemon src/index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.2.0",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-rate-limit": "^5.2.3",
@@ -16,7 +17,6 @@
         "redis": "^3.0.2"
     },
     "devDependencies": {
-        "dotenv": "^8.2.0",
         "nodemon": "^2.0.6"
     }
 }
