--- a/app.json
+++ b/app.json
@@ -3,5 +3,12 @@
     "description": "App for testing request rate limits in NodeJS, Express and Redis",
     "repository": "https://github.com/RemoteCraftsmen/redis-rate-limiting",
     "keywords": ["node", "express", "redis"],
-    "addons": ["heroku-redis:hobby-dev"]
+    "addons": ["heroku-redis:hobby-dev"],
+    "env": {
+        "WEB_CONCURRENCY": {
+            "description": "Number of processes to run",
+            "value": "1",
+            "required": true
+        }
+    }
 }
