--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 PORT=3000
 
+# Host and a port. Can be with `redis://` or without.
+# Host and a port encoded in redis uri take precedence over other environment variable.
+# preferable
+REDIS_ENDPOINT_URI=redis://127.0.0.1:6379
+
+# Or you can set it here (ie. for docker development)
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_ENDPOINT_URI=
+
+# You can set password here
 REDIS_PASSWORD=
 
 COMPOSE_PROJECT_NAME=redis-rate-limiting
